--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -43,7 +43,7 @@ parameters:
 
   jitsi_version:
     type: string
-    default: stable-8719
+    default: stable-8960-1
     #default: master
 
   # Default 0 is autodetect (using the MTU from the default route's NIC)
