Use JVB_ADVERTISE_IPS to set docker IP addresses.
Also enable AV1 (experimental, disabled by default).

Signed-off-by: Kurt Garloff <kurt@garloff.de>

--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -44,7 +44,7 @@ parameters:
   jitsi_version:
     type: string
     default: stable-8960-1
-    #default: master
+    #default: stable
 
   # Default 0 is autodetect (using the MTU from the default route's NIC)
   # Any other number (e.g. 1440) overrides this.
@@ -163,17 +163,27 @@ parameters:
     type: number
     default: 0
 
+  # Enable AV1 (numeric here, will be transformed to boolean, enables VP9 as well)
+  enable_av1:
+    type: number
+    default: 0
+
   # Enable VP9 (numeric here, will be transformed to boolean)
   enable_vp9:
     type: number
     default: 0
 
-  # tweak VP9 bandwidth in kbps low, std, hi: 100, 300, 1200
+  # tweak AV1 bandwidth in kbps low, std, hi, e.g.: 120, 320, 960
+  av1_bandwidth:
+    type: string
+    default: ""
+
+  # tweak VP9 bandwidth in kbps low, std, hi, e.g.: 150, 400, 1200
   vp9_bandwidth:
     type: string
     default: ""
 
-  # tweak VP8 bandwidth in kbps low, std, hi: 200, 500, 1500
+  # tweak VP8 bandwidth in kbps low, std, hi, e.g.: 200, 500, 1500
   vp8_bandwidth:
     type: string
     default: ""
@@ -381,6 +391,7 @@ resources:
                   jigasi_sip_port: {get_param: jigasi_sip_port}
                   jigasi_port_min: {get_param: jigasi_port_min}
                   jigasi_port_max: {get_param: jigasi_port_max}
+                  enable_av1: {get_param: enable_av1}
                   enable_vp9: {get_param: enable_vp9}
                   enable_websocket: {get_param: enable_websocket}
                   enable_prejoin: {get_param: enable_prejoin}
@@ -411,6 +422,7 @@ resources:
                   sed -i "s@^#PUBLIC_URL=.*\$@PUBLIC_URL=$PUBLIC_URL@" .env
                   IP=$(ip addr show eth0 | grep 'inet ' | sed 's@^ *inet \([0-9\.]*\)/\([0-9]*\) .*$@\1@')
                   sed -i "s@^#DOCKER_HOST_ADDRESS=.*\$@#DOCKER_HOST_ADDRESS=$IP\nDOCKER_HOST_ADDRESS=floating_ip@" .env
+                  sed -i "s@^#JVB_ADVERTISE_IPS=.*\$@JVB_ADVERTISE_IPS=$IP,floating_ip@" .env
                   if test -n "letsenc_mail"; then
                     sed -i 's/^#LETSENCRYPT_EMAIL=.*$/LETSENCRYPT_EMAIL=letsenc_mail/' .env
                     LETSENC_DOM="letsenc_domain"
@@ -478,7 +490,9 @@ resources:
                   jigasi_default_room: {get_param: jigasi_default_room}
                   stun_servers: {get_param: stun_servers}
                   use_stun_p2p: {get_param: use_stun_p2p}
+                  enable_av1: {get_param: enable_av1}
                   enable_vp9: {get_param: enable_vp9}
+                  av1_bandwidth: {get_param: av1_bandwidth}
                   vp9_bandwidth: {get_param: vp9_bandwidth}
                   vp8_bandwidth: {get_param: vp8_bandwidth}
                   tweak_opusMaxAvgRate: {get_param: tweak_opusMaxAvgRate}
@@ -574,6 +588,15 @@ resources:
                     #sed -i "s@^\( *\)\/\/ \( *preferredCodec: \).*\$@\1\2'VP9',@" $WEBCFG
                     echo "config.videoQuality.preferredCodec = 'VP9';" >> $WEBCFG
                     echo "config.p2p.preferredCodec = 'VP9';" >> $WEBCFG
+                  fi
+                  if test "enable_av1" != "0"; then
+                    echo "config.p2p.codecPreferenceOrder=[‘AV1’,‘VP9’,‘VP8’,‘H264’];" >> $WEBCFG
+                    echo "config.videoQuality.codecPreferenceOrder=[‘AV1’,‘VP9’,‘VP8’,‘H264’];" >> $WEBCFG
+                    echo "config.testing.enableAv1=true;" >> $WEBCFG
+                    echo "jicofo.codec.video.av1.enabled = true;" >> $WEBCFG
+                  fi
+                  if test -n "av1_bandwidth"; then
+                    echo "av1_bandwidth" | sed 's@^\([0-9]*\), *\([0-9]*\), *\([0-9]*\) *$@config.videoQuality.maxBitratesVideo.AV1 = { low: \1000, standard: \2000, high: \3000 };@' >> $WEBCFG
                   fi
                   if test -n "vp9_bandwidth"; then
                     echo "vp9_bandwidth" | sed 's@^\([0-9]*\), *\([0-9]*\), *\([0-9]*\) *$@config.videoQuality.maxBitratesVideo.VP9 = { low: \1000, standard: \2000, high: \3000 };@' >> $WEBCFG
