--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -590,11 +590,15 @@ resources:
                     echo "config.videoQuality.preferredCodec = 'VP9';" >> $WEBCFG
                     echo "config.p2p.preferredCodec = 'VP9';" >> $WEBCFG
                   fi
+                  if test "tweak_opusMaxAvgRate" != 0 -o "tweak_opusRed" != 0 -o "enable_stereo" != 0 -o "enable_av1" != 0; then
+                    echo "config.testing = {};" >> $WEBCFG
+                    echo "config.testing.audioQuality = {};" >> $WEBCFG
+                  fi
                   if test "enable_av1" != "0"; then
                     echo "config.p2p.codecPreferenceOrder = ['AV1', 'VP9', 'VP8', 'H264'];" >> $WEBCFG
                     echo "config.videoQuality.codecPreferenceOrder = ['AV1', 'VP9', 'VP8', 'H264'];" >> $WEBCFG
                     echo "config.testing.enableAv1 = true;" >> $WEBCFG
-                    echo "jicofo.codec.video.av1.enabled = true;" >> $WEBCFG
+                    echo "//jicofo.codec.video.av1.enabled = true;" >> $WEBCFG
                   fi
                   if test -n "av1_bandwidth" -o -n "vp9_bandwidth" -o -n "vp8_bandwidth"; then
                     echo "config.videoQuality.maxBitratesVideo = {};" >> $WEBCFG
