--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -115,7 +115,7 @@ parameters:
     type: string
     #default: stun.l.google.com:19302,stun1.l.google.com:19302,stun2.l.google.com:19302
     #default: stun.stunprotocol.org:3478,stun.services.mozilla.com:3478
-    default: stun.stunprotocol.org:3478,stun.hosteurope.de:3478,stun.1und1.de:3478,stun.xs4all.nl,stun.linphone.org:3478,stun.t-online.de:3478
+  default: stun.freeswitch.org:3478,stun.1und1.de:3478,stun.linphone.org:3478,stun.t-online.de:3478,stun.gmx.net:3478
 
   # Use STUN servers also for p2p
   use_stun_p2p:
