--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -638,11 +638,11 @@ resources:
                     fi
                     echo " ];" >> $WEBCFG
                     if test -n "turn_server" -o -n "turns_server"; then
-                      echo "config.p2p.useStunTurn = true;" >> $$WEBCFG
+                      echo "config.p2p.useStunTurn = true;" >> $WEBCFG
                     fi
                   fi
                   if test -n "turn_server" -o -n "turns_server"; then
-                    echo "config.useStunTurn = true;" >> $$WEBCFG
+                    echo "config.useStunTurn = true;" >> $WEBCFG
                   fi
                   if test "enable_av1" != "0"; then
                     echo "config.videoQuality.preferredCodec = 'AV1';" >> $WEBCFG
