Default to stable-9220-1. Set ScreenShare rate to 1 -- 10.
(desktopSharingFrameRate was 2 -- 10 before and may have lead
to flicker.)

Signed-off-by: Kurt Garloff <kurt@garloff.de>

--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -43,7 +43,7 @@ parameters:
 
   jitsi_version:
     type: string
-    default: stable-9111
+    default: stable-9220-1
     #default: stable
 
   # Default 0 is autodetect (using the MTU from the default route's NIC)
@@ -688,7 +688,7 @@ resources:
                   if test "enable_stereo" != 0; then
                     echo "config.testing.audioQuality.stereo = true;" >> $WEBCFG
                   fi
-                  echo "config.desktopSharingFrameRate = { min: 2, max: 10 };" >> $WEBCFG
+                  echo "config.desktopSharingFrameRate = { min: 1, max: 10 };" >> $WEBCFG
                   if test "disable_screenshare_framerate" != 0; then
                     sed -i 's@^config.desktopSharingFrameRate@//config.desktopSharingFrameRate@' $WEBCFG
                   fi
