--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -423,6 +423,7 @@ resources:
                   enable_etherpad: {get_param: enable_etherpad}
                   floating_ip: {get_attr: [jitsi_floating_ip, floating_ip_address]}
                   disable_tcp_harvester: {get_param: disable_tcp_harvester}
+                  disable_screenshare_framerate: {get_param: disable_screenshare_framerate}
                 template: |
                   #!/usr/bin/env bash
                   export USER=root
@@ -508,6 +509,12 @@ resources:
                     echo "TURNS_HOST=${TURNS_SRV%:*}" >> .env
                     echo "TURNS_PORT=${TURNS_SRV##*:}" >> .env
                   fi
+                  if test "disable_screenshare_framerate" != "0"; then
+                    echo "DESKTOP_SHARING_FRAMERATE_AUTO=true" >> .env
+                  else
+                    echo "DESKTOP_SHARING_FRAMERATE_MIN=2" >> .env
+                    echo "DESKTOP_SHARING_FRAMERATE_MAX=10" >> .env
+                  fi
             path: /root/config-env.sh
             permissions: '0700'
           - content:
@@ -543,7 +550,6 @@ resources:
                   enable_stereo: {get_param: enable_stereo}
                   enable_etherpad: {get_param: enable_etherpad}
                   enable_jibri: {get_param: enable_jibri}
-                  disable_screenshare_framerate: {get_param: disable_screenshare_framerate}
                 template: |
                   #!/usr/bin/env bash
                   export USER=root
@@ -688,10 +694,7 @@ resources:
                   if test "enable_stereo" != 0; then
                     echo "config.testing.audioQuality.stereo = true;" >> $WEBCFG
                   fi
-                  echo "config.desktopSharingFrameRate = { min: 1, max: 10 };" >> $WEBCFG
-                  if test "disable_screenshare_framerate" != 0; then
-                    sed -i 's@^config.desktopSharingFrameRate@//config.desktopSharingFrameRate@' $WEBCFG
-                  fi
+                  #echo "config.desktopSharingFrameRate = { min: 2, max: 10 };" >> $WEBCFG
                   sleep 1
                   # Deploy users
                   if test -n "xmpp_domain"; then XMPP_DOMAIN=xmpp_domain; else XMPP_DOMAIN=meet.jitsi; fi
